Fix distorted earth image

--- a/src/pages/HistoricalPhotos/HistoricalPhotos.module.css
+++ b/src/pages/HistoricalPhotos/HistoricalPhotos.module.css
@@ -141,8 +141,8 @@
   height: 40rem;
   padding-left: 900px;
   margin-bottom: -270px;
-  margin-left: 15px;
-  margin-top: -260px;
+  margin-left: -365px;
+  margin-top: -230px;
 }
 
 
